Supports fixed background on iOS
{background-size:cover; background-attachment: fixed;}
This property is not supported on iOS
Use a fixed element (#cover-image) to implement the parallax effect

--- a/css-framework/sections/_header.scss
+++ b/css-framework/sections/_header.scss
@@ -2,9 +2,13 @@
 
 #hero {
   @include cover-unit();
-  @include background("dark");
 }
 
 #hero-content {
   @include cover-section();
+}
+
+#cover-image {
+  @include cover-image();
+  @include background("light");
 }
