--- a/style.css
+++ b/style.css
@@ -95,19 +95,12 @@ input, button, select, optgroup, textarea {
   width: 100%;
   height: 100vh;
   min-height: 576px;
-  background-image: none;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  background-attachment: fixed;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #262626;
-  color: #ffffff;
 }
 
 #hero-content {
@@ -115,6 +108,25 @@ input, button, select, optgroup, textarea {
       -ms-flex: 0 0 100%;
           flex: 0 0 100%;
   text-align: center;
+}
+
+#cover-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100vh;
+  min-height: 576px;
+  background-image: none;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: scroll;
+  -webkit-filter: none;
+          filter: none;
+  background-color: #d9d9d9;
+  color: #262626;
 }
 
 #header-navigation {
